[tool.poetry]
name = "factory_boy-stubs"
version = "0.1.0"
description = ""
authors = ["Alessio Bogon <youtux@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
factory-boy = "^3.2.1"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = 'black'
