[tool.poetry]
name = "types-factory-boy"
version = "0.3.1-dev0"
description = "Typing stubs for factory-boy"
license = "MIT"
authors = ["Alessio Bogon <778703+youtux@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/youtux/types-factory-boy"
packages = [{ include = "factory-stubs", from="src" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Stubs Only",
]

[tool.poetry.dependencies]
python = ">=3.7"
factory-boy = ">=3.2.0"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
SQLAlchemy = "^1.4.36"
Django = "^3.2"
mongoengine = "^0.24.1"
MonkeyType = "^22.2.0"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = 'black'

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_return_any = true
pretty = true
show_error_codes = true
